--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>git hub</title>
 </head>
 <body>
-    <h1>create version control account on github</h1> 
+    <h1>create version control hello</h1> 
 
 </body>
 </html>
